--- a/services/webapi/src/main/resources/application.yaml
+++ b/services/webapi/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
 micronaut:
   application:
     name: trenako
+  server:
+    port: 8080
+
+endpoints:
+  all:
+    port: 8081
+  health:
+    enabled: true
+    sensitive: false
